Bug 343839 - File open dialog does not show "*.kig" files when not using the frameworksintegration plugin
Summary: File open dialog does not show "*.kig" files when not using the frameworksint...
Status: RESOLVED FIXED
Alias: None
Product: kig
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David E. Narvaez
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-05 23:58 UTC by Christoph Feck
Modified: 2018-12-24 15:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2015-02-05 23:58:08 UTC
Using menu item "File > Open..." shows the Qt file dialog with a predefined "Files of type:" filter, which includes "application/x-kig", but no *.kig files are visible in the file dialog. (typing the file name manually lets me open the file).

Might be a Qt bug.
Comment 1 Christoph Feck 2018-09-19 23:50:26 UTC
Still reproducible after https://phabricator.kde.org/D9057

The behaviour is as follows:
- Using standard KDE file dialog (XDG_CURRENT_DESKTOP=kde): Only the "All Files" filter is shown, and a .kig file can be selected
- Using default Qt file dialog (XDG_CURRENT_DESKTOP=qt): A filter for several file types (including application/x-kig) is shown, but a .kig file does not appear in the file list.
Comment 2 Yuri Chornoivan 2018-12-24 15:07:09 UTC
Git commit 9685a13c6b95602b7348b872be457c7461640248 by Yuri Chornoivan.
Committed on 24/12/2018 at 15:06.
Pushed by yurchor into branch 'master'.

Fix the list of file types in Kig 'Open File' dialog
Differential Revision: https://phabricator.kde.org/D17697

M  +13   -3    kig/kig.cpp

https://commits.kde.org/kig/9685a13c6b95602b7348b872be457c7461640248