Fix the list of file types in Kig 'Open File' dialog

BUG: 343839
Differential Revision: https://phabricator.kde.org/D17697